WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303399
auto-placement cursor is broken for spanning items in grid-lanes layout [css-grid-3]
https://bugs.webkit.org/show_bug.cgi?id=303399
Summary
auto-placement cursor is broken for spanning items in grid-lanes layout [css-...
fantasai
Reported
2025-12-02 09:33:36 PST
We're failing
http://wpt.live/css/css-grid/grid-lanes/tentative/item-placement/grid-lanes-item-placement-002.html
due to misplacing the spanning item.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-02 09:33:46 PST
<
rdar://problem/165701659
>
fantasai
Comment 2
2025-12-02 10:09:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54709
EWS
Comment 3
2025-12-03 00:17:17 PST
Committed
303815@main
(004b3965f623): <
https://commits.webkit.org/303815@main
> Reviewed commits have been landed. Closing PR #54709 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug