Fix auto-placement cursor for spanning items in grid-lanes layout https://bugs.webkit.org/show_bug.cgi?id=303399 rdar://165701659

Reviewed by Brandon Stewart.

We can't mod an auto-placement cursor that's past the max start line
and get a correct answer, we need to wrap it first into the correct
range.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/GridMasonryLayout.cpp:
(WebCore::GridMasonryLayout::gridAreaForIndefiniteGridAxisItem):

Canonical link: https://commits.webkit.org/303815@main