Source/WebCore/rendering/GridMasonryLayout.cpp
@@ -255,11 +255,11 @@ GridArea GridMasonryLayout::gridAreaForIndefiniteGridAxisItem(const RenderBox& i
     for (unsigned i = 0; i < maxStartingLine; i++)
         absoluteShortest = std::min(absoluteShortest, maxRunningPositionForSpan(i, itemSpanLength));
 
-    // Step 2: Find first position within tolerance of shortest
+    // Step 2: Find first position within tolerance of shortest, starting from the cursor position.
     unsigned smallestMaxPosLine = 0;
+    auto autoFlowNextCursorShift = (m_autoFlowNextCursor > maxStartingLine) ? 0 : m_autoFlowNextCursor;
     for (unsigned i = 0; i < maxStartingLine; i++) {
-        // Start from cursor position and wrap around
-        auto startingLine = (m_autoFlowNextCursor + i) % maxStartingLine;
+        auto startingLine = (autoFlowNextCursorShift + i) % maxStartingLine;
 
         auto maxPosForCurrentStartingLine = maxRunningPositionForSpan(startingLine, itemSpanLength);
 
